make sure nametag isnt cut off

--- a/src/style.css
+++ b/src/style.css
@@ -62,6 +62,7 @@ body {
 .cm-scroller {
   overflow: hidden;
   padding: 0 8px;
+  padding-bottom: 12px; /* to make sure nametag isnt cut off */
 }
 
 .cm-gutters {
